--- a/sources/templates/base/feedback_stat.html
+++ b/sources/templates/base/feedback_stat.html
@@ -3,6 +3,6 @@
         <i class="sys-icon thumbs-up"> __yes__</i> <i class="sys-icon thumbs-down" style="color: red"> __no__</i> (__rate__%)
     </bx_if:avalaible>
     <bx_if:notAvalaible>
-        N/A
+        <bx_text:_mg_faq_noFeedback />
     </bx_if:notAvalaible>
 </div>
