--- a/sources/templates/base/faq.html
+++ b/sources/templates/base/faq.html
@@ -1,5 +1,5 @@
 <div class="Faq">
-    <table style="width: 100%">
+    <table>
         <bx_repeat:faq>
             <tr class="Question" id="__RowId__">
                 <td>
