--- a/sources/templates/base/faq_search.html
+++ b/sources/templates/base/faq_search.html
@@ -1,6 +1,6 @@
 <div class="Faq">
     <h2>__searchTitle__</h2>
-    <table style="width: 100%">
+    <table>
         <bx_repeat:searchFaq>
             <tr class="Question" id="__RowId__">
                 <td>
